Migrate view string i18n to gettext.

--- a/priv/gettext/lang/default/en/gettext.pot
+++ b/priv/gettext/lang/default/en/gettext.pot
@@ -11,11 +11,41 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid ""
+"(not published)"
+msgstr ""
+"(not published)"
+
+msgid ""
+"(optional, not published)"
+msgstr ""
+"(optional, not published)"
+
+msgid ""
+"(select language)"
+msgstr ""
+"(select language)"
+
+msgid ""
+"(unspecified)"
+msgstr ""
+"(unspecified)"
+
+msgid ""
+"(untitled)"
+msgstr ""
+"(untitled)"
+
+msgid ""
 "A new password for the account <span class=\"code\">$user$@$host$</span> has "
 "been set."
 msgstr ""
 "A new password for the account <span class=\"code\">$user$@$host$</span> has "
 "been set."
+
+msgid ""
+"About"
+msgstr ""
+"About"
 
 msgid ""
 "Account"
@@ -28,9 +58,19 @@ msgstr ""
 "Account recovery"
 
 msgid ""
+"Account registered"
+msgstr ""
+"Account registered"
+
+msgid ""
 "Account:"
 msgstr ""
 "Account:"
+
+msgid ""
+"Add"
+msgstr ""
+"Add"
 
 msgid ""
 "An E-mail containing instrucions on how to complete the recovery proceduce "
@@ -48,6 +88,26 @@ msgstr ""
 "recovery E-mail, please contact the administrator for help."
 
 msgid ""
+"An error occurred"
+msgstr ""
+"An error occurred"
+
+msgid ""
+"Authors"
+msgstr ""
+"Authors"
+
+msgid ""
+"Back"
+msgstr ""
+"Back"
+
+msgid ""
+"Cancel"
+msgstr ""
+"Cancel"
+
+msgid ""
 "Change password"
 msgstr ""
 "Change password"
@@ -58,9 +118,24 @@ msgstr ""
 "Change private E-mail"
 
 msgid ""
+"Choose content type"
+msgstr ""
+"Choose content type"
+
+msgid ""
 "Clear"
 msgstr ""
 "Clear"
+
+msgid ""
+"Close"
+msgstr ""
+"Close"
+
+msgid ""
+"Compose"
+msgstr ""
+"Compose"
 
 msgid ""
 "Confirm password:"
@@ -68,9 +143,59 @@ msgstr ""
 "Confirm password:"
 
 msgid ""
+"Content"
+msgstr ""
+"Content"
+
+msgid ""
+"Content Management"
+msgstr ""
+"Content Management"
+
+msgid ""
+"Content type"
+msgstr ""
+"Content type"
+
+msgid ""
+"Content:"
+msgstr ""
+"Content:"
+
+msgid ""
+"Copy translation to"
+msgstr ""
+"Copy translation to"
+
+msgid ""
+"Copying..."
+msgstr ""
+"Copying..."
+
+msgid ""
 "Current password:"
 msgstr ""
 "Current password:"
+
+msgid ""
+"Date"
+msgstr ""
+"Date"
+
+msgid ""
+"Discard"
+msgstr ""
+"Discard"
+
+msgid ""
+"Drafts"
+msgstr ""
+"Drafts"
+
+msgid ""
+"E-mail "
+msgstr ""
+"E-mail "
 
 msgid ""
 "E-mail address of the account <span class=\"code\">$user$@$host$</span> has "
@@ -85,6 +210,11 @@ msgstr ""
 "E-mail sent"
 
 msgid ""
+"Edit post"
+msgstr ""
+"Edit post"
+
+msgid ""
 "Either the username, the password or both were incorrect."
 msgstr ""
 "Either the username, the password or both were incorrect."
@@ -93,6 +223,16 @@ msgid ""
 "Enter a valid E-mail address."
 msgstr ""
 "Enter a valid E-mail address."
+
+msgid ""
+"Enter a valid email address"
+msgstr ""
+"Enter a valid email address"
+
+msgid ""
+"Error"
+msgstr ""
+"Error"
 
 msgid ""
 "Failed"
@@ -117,9 +257,61 @@ msgstr ""
 "Failed to set new password. Contact the admistrator for help."
 
 msgid ""
+"Go to translation"
+msgstr ""
+"Go to translation"
+
+msgid ""
+"Internal error"
+msgstr ""
+"Internal error"
+
+msgid ""
+"Invalid input"
+msgstr ""
+"Invalid input"
+
+msgid ""
+"Jabber.se is a not-for-profit public Jabber service in Sweden. It's open "
+"for anyone and completely free."
+msgstr ""
+"Jabber.se is a not-for-profit public Jabber service in Sweden. It's open "
+"for anyone and completely free."
+
+msgid ""
+"Loading..."
+msgstr ""
+"Loading..."
+
+msgid ""
+"Login"
+msgstr ""
+"Login"
+
+msgid ""
+"Login failed"
+msgstr ""
+"Login failed"
+
+msgid ""
+"Login success"
+msgstr ""
+"Login success"
+
+msgid ""
+"Logout"
+msgstr ""
+"Logout"
+
+msgid ""
 "Lost password"
 msgstr ""
 "Lost password"
+
+msgid ""
+"Manage"
+msgstr ""
+"Manage"
 
 msgid ""
 "New E-mail:"
@@ -132,6 +324,36 @@ msgstr ""
 "New password:"
 
 msgid ""
+"News"
+msgstr ""
+"News"
+
+msgid ""
+"No drafts..."
+msgstr ""
+"No drafts..."
+
+msgid ""
+"No posts..."
+msgstr ""
+"No posts..."
+
+msgid ""
+"Note:"
+msgstr ""
+"Note:"
+
+msgid ""
+"Page needs to be reloaded"
+msgstr ""
+"Page needs to be reloaded"
+
+msgid ""
+"Password"
+msgstr ""
+"Password"
+
+msgid ""
 "Password changed"
 msgstr ""
 "Password changed"
@@ -140,6 +362,11 @@ msgid ""
 "Password must be at least $min$ characters long."
 msgstr ""
 "Password must be at least $min$ characters long."
+
+msgid ""
+"Password must be at least 6 characters long."
+msgstr ""
+"Password must be at least 6 characters long."
 
 msgid ""
 "Password set"
@@ -155,6 +382,16 @@ msgid ""
 "Passwords must match"
 msgstr ""
 "Passwords must match"
+
+msgid ""
+"Post content"
+msgstr ""
+"Post content"
+
+msgid ""
+"Publish"
+msgstr ""
+"Publish"
 
 msgid ""
 "Recover your account"
@@ -188,14 +425,66 @@ msgstr ""
 "contact the administrator."
 
 msgid ""
+"Register"
+msgstr ""
+"Register"
+
+msgid ""
+"Registration failed"
+msgstr ""
+"Registration failed"
+
+msgid ""
+"Reload"
+msgstr ""
+"Reload"
+
+msgid ""
+"Remove post"
+msgstr ""
+"Remove post"
+
+msgid ""
 "Required"
 msgstr ""
 "Required"
 
 msgid ""
+"Save"
+msgstr ""
+"Save"
+
+msgid ""
+"Saved..."
+msgstr ""
+"Saved..."
+
+msgid ""
+"Saving failed..."
+msgstr ""
+"Saving failed..."
+
+msgid ""
+"Subject:"
+msgstr ""
+"Subject:"
+
+msgid ""
 "Submit"
 msgstr ""
 "Submit"
+
+msgid ""
+"Tags:"
+msgstr ""
+"Tags:"
+
+msgid ""
+"The account <span class=\"code\">$user$@$host</code> was successfully "
+"registered. You may start using it right away."
+msgstr ""
+"The account <span class=\"code\">$user$@$host</code> was successfully "
+"registered. You may start using it right away."
 
 msgid ""
 "The account recovery session has timed out."
@@ -210,6 +499,60 @@ msgstr ""
 "been canceled."
 
 msgid ""
+"Tools:"
+msgstr ""
+"Tools:"
+
+msgid ""
+"Translation"
+msgstr ""
+"Translation"
+
+msgid ""
+"Unauthorized request"
+msgstr ""
+"Unauthorized request"
+
+msgid ""
+"Unpublish"
+msgstr ""
+"Unpublish"
+
+msgid ""
+"Username"
+msgstr ""
+"Username"
+
+msgid ""
+"Username already taken"
+msgstr ""
+"Username already taken"
+
+msgid ""
 "Username:"
 msgstr ""
 "Username:"
+
+msgid ""
+"Username: "
+msgstr ""
+"Username: "
+
+msgid ""
+"You did not specify an E-mail address. This means you cannot request a new "
+"password in case you lost it. If you want to be able to, you need to "
+"register it in the future. The E-mail you register will not be public."
+msgstr ""
+"You did not specify an E-mail address. This means you cannot request a new "
+"password in case you lost it. If you want to be able to, you need to "
+"register it in the future. The E-mail you register will not be public."
+
+msgid ""
+"admin"
+msgstr ""
+"admin"
+
+msgid ""
+"by"
+msgstr ""
+"by"
