--- a/priv/gettext/lang/default/en/gettext.pot
+++ b/priv/gettext/lang/default/en/gettext.pot
@@ -394,11 +394,6 @@ msgstr ""
 "Publish"
 
 msgid ""
-"Recover your account"
-msgstr ""
-"Recover your account"
-
-msgid ""
 "Recovery E-mail already sent"
 msgstr ""
 "Recovery E-mail already sent"
@@ -480,10 +475,10 @@ msgstr ""
 "Tags:"
 
 msgid ""
-"The account <span class=\"code\">$user$@$host</code> was successfully "
+"The account <span class=\"code\">$user$@$host$</span> was successfully "
 "registered. You may start using it right away."
 msgstr ""
-"The account <span class=\"code\">$user$@$host</code> was successfully "
+"The account <span class=\"code\">$user$@$host$</span> was successfully "
 "registered. You may start using it right away."
 
 msgid ""
