--- a/priv/gettext/lang/default/sv/gettext.po
+++ b/priv/gettext/lang/default/sv/gettext.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: git\n"
 "POT-Creation-Date: 2006-07-01 16:45+0200\n"
-"PO-Revision-Date: 2011-12-21 23:49+0100\n"
+"PO-Revision-Date: 2011-12-31 19:05+0100\n"
 "Last-Translator: Jonas Ådahl <jadahl@gmail.com>\n"
 "Language-Team: \n"
 "Language: \n"
@@ -235,9 +235,6 @@ msgstr "Titel"
 msgid "Publish"
 msgstr "Publicera"
 
-msgid "Recover your account"
-msgstr "Återställ ditt konto"
-
 msgid "Recovery E-mail already sent"
 msgstr "E-brev redan skickat"
 
@@ -283,8 +280,8 @@ msgstr "Skicka"
 msgid "Tags:"
 msgstr "Taggar"
 
-msgid "The account <span class=\"code\">$user$@$host</code> was successfully registered. You may start using it right away."
-msgstr "Kontot <span class=\"code\">$user$@$host</code> har registrerats. Du kan börja använda det direkt."
+msgid "The account <span class=\"code\">$user$@$host$</span> was successfully registered. You may start using it right away."
+msgstr "Kontot <span class=\"code\">$user$@$host$</span> har registrerats. Du kan börja använda det direkt."
 
 msgid "The account recovery session has timed out."
 msgstr "Kontoåterställningentiden har gått ut."
@@ -325,5 +322,3 @@ msgstr "admin"
 msgid "by"
 msgstr "av"
 
-#~ msgid "Unknown"
-#~ msgstr "Okänd"
